--- a/college.css
+++ b/college.css
@@ -7,6 +7,7 @@
 
 }
 
+
 .responsive {
     width: 100%;
     height: auto;
@@ -195,6 +196,10 @@ li:hover .sub-menu-1 ul li {
 
 } */
 
+.title{
+    width:25%%;
+
+}
 li:hover .sub-menu-1 ul li a:hover {
     color: black;
 }
